--- a/Draw/Controller/Feedback/ReportController~iPad.xib
+++ b/Draw/Controller/Feedback/ReportController~iPad.xib
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="8.00">
 	<data>
-		<int key="IBDocument.SystemTarget">1296</int>
-		<string key="IBDocument.SystemVersion">11E53</string>
-		<string key="IBDocument.InterfaceBuilderVersion">2182</string>
-		<string key="IBDocument.AppKitVersion">1138.47</string>
-		<string key="IBDocument.HIToolboxVersion">569.00</string>
+		<int key="IBDocument.SystemTarget">1280</int>
+		<string key="IBDocument.SystemVersion">10K549</string>
+		<string key="IBDocument.InterfaceBuilderVersion">1938</string>
+		<string key="IBDocument.AppKitVersion">1038.36</string>
+		<string key="IBDocument.HIToolboxVersion">461.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">1179</string>
+			<string key="NS.object.0">933</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBUIView</string>
@@ -78,7 +78,7 @@
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 						<object class="NSCustomResource" key="IBUIImage">
 							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">paperclip.png</string>
+							<string key="NSResourceName">paperclip@2x.png</string>
 						</object>
 					</object>
 					<object class="IBUIImageView" id="1071675617">
@@ -92,13 +92,13 @@
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 						<object class="NSCustomResource" key="IBUIImage">
 							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">topwood.png</string>
+							<string key="NSResourceName">topwood@2x.png</string>
 						</object>
 					</object>
 					<object class="IBUIImageView" id="663998015">
 						<reference key="NSNextResponder" ref="307016591"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{96, 185}, {576, 347}}</string>
+						<string key="NSFrame">{{50, 250}, {668, 280}}</string>
 						<reference key="NSSuperview" ref="307016591"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="996153975"/>
@@ -108,18 +108,17 @@
 					<object class="IBUIImageView" id="675122707">
 						<reference key="NSNextResponder" ref="307016591"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{96, 550}, {576, 67}}</string>
+						<string key="NSFrame">{{50, 550}, {668, 67}}</string>
 						<reference key="NSSuperview" ref="307016591"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="314190825"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 					</object>
 					<object class="IBUITextView" id="996153975">
 						<reference key="NSNextResponder" ref="307016591"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{96, 185}, {576, 347}}</string>
+						<string key="NSFrame">{{50, 250}, {668, 280}}</string>
 						<reference key="NSSuperview" ref="307016591"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="675122707"/>
@@ -248,7 +247,7 @@
 						<string key="NSFrame">{{120, 8}, {528, 78}}</string>
 						<reference key="NSSuperview" ref="307016591"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="424689250"/>
+						<reference key="NSNextKeyView" ref="1031066275"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
@@ -263,6 +262,7 @@
 						</object>
 						<string key="IBUIShadowOffset">{0, 1}</string>
 						<int key="IBUIBaselineAdjustment">0</int>
+						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 						<float key="IBUIMinimumFontSize">10</float>
 						<int key="IBUITextAlignment">1</int>
 						<object class="IBUIFontDescription" key="IBUIFontDescription">
@@ -274,7 +274,43 @@
 							<double key="NSSize">40</double>
 							<int key="NSfFlags">16</int>
 						</object>
-						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
+					</object>
+					<object class="IBUIButton" id="1031066275">
+						<reference key="NSNextResponder" ref="307016591"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{100, 144}, {568, 90}}</string>
+						<reference key="NSSuperview" ref="307016591"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="424689250"/>
+						<bool key="IBUIOpaque">NO</bool>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+						<int key="IBUIContentHorizontalAlignment">0</int>
+						<int key="IBUIContentVerticalAlignment">0</int>
+						<double key="IBUIContentEdgeInsets.top">0.0</double>
+						<double key="IBUIContentEdgeInsets.bottom">0.0</double>
+						<double key="IBUIContentEdgeInsets.left">20</double>
+						<double key="IBUIContentEdgeInsets.right">20</double>
+						<string key="IBUINormalTitle">欢迎加入猜猜画画玩家QQ群:228119679, 关注官方微博 @猜猜画画手机版</string>
+						<reference key="IBUIHighlightedTitleColor" ref="558245650"/>
+						<object class="NSColor" key="IBUINormalTitleColor">
+							<int key="NSColorSpace">2</int>
+							<bytes key="NSRGB">MC40MjM1Mjk0MTE4IDAuMTkyMTU2ODYyNyAwLjAzMTM3MjU0OTAyAA</bytes>
+						</object>
+						<reference key="IBUINormalTitleShadowColor" ref="345726802"/>
+						<object class="NSCustomResource" key="IBUINormalBackgroundImage">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">messagebg@2x.png</string>
+						</object>
+						<object class="IBUIFontDescription" key="IBUIFontDescription">
+							<int key="type">1</int>
+							<double key="pointSize">26</double>
+						</object>
+						<object class="NSFont" key="IBUIFont">
+							<string key="NSName">Helvetica</string>
+							<double key="NSSize">26</double>
+							<int key="NSfFlags">16</int>
+						</object>
 					</object>
 				</array>
 				<string key="NSFrameSize">{768, 1004}</string>
@@ -356,6 +392,14 @@
 					<int key="connectionID">24</int>
 				</object>
 				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">tips</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="1031066275"/>
+					</object>
+					<int key="connectionID">30</int>
+				</object>
+				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">submit:</string>
 						<reference key="source" ref="807215843"/>
@@ -424,6 +468,7 @@
 							<reference ref="996153975"/>
 							<reference ref="314190825"/>
 							<reference ref="807215843"/>
+							<reference ref="1031066275"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -482,6 +527,11 @@
 						<reference key="object" ref="684203932"/>
 						<reference key="parent" ref="307016591"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">29</int>
+						<reference key="object" ref="1031066275"/>
+						<reference key="parent" ref="307016591"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -495,6 +545,7 @@
 				<string key="13.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="14.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="15.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="29.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -506,7 +557,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">28</int>
+			<int key="maxID">30</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -532,6 +583,55 @@
 							<string key="candidateClassName">id</string>
 						</object>
 					</object>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="backButton">UIButton</string>
+						<string key="contactBackground">UIImageView</string>
+						<string key="contactText">UITextField</string>
+						<string key="contentBackground">UIImageView</string>
+						<string key="contentText">UITextView</string>
+						<string key="doneButton">UIButton</string>
+						<string key="reporterTitle">UILabel</string>
+						<string key="submitButton">UIButton</string>
+						<string key="tips">UIButton</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="backButton">
+							<string key="name">backButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="contactBackground">
+							<string key="name">contactBackground</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="contactText">
+							<string key="name">contactText</string>
+							<string key="candidateClassName">UITextField</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="contentBackground">
+							<string key="name">contentBackground</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="contentText">
+							<string key="name">contentText</string>
+							<string key="candidateClassName">UITextView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="doneButton">
+							<string key="name">doneButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="reporterTitle">
+							<string key="name">reporterTitle</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="submitButton">
+							<string key="name">submitButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="tips">
+							<string key="name">tips</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+					</dictionary>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/ReportController.h</string>
@@ -543,17 +643,18 @@
 		<string key="IBDocument.TargetRuntimeIdentifier">IBIPadFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaTouchPlugin.iPhoneOS</string>
-			<real value="1296" key="NS.object.0"/>
+			<real value="1280" key="NS.object.0"/>
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
 			<string key="back.png">{16, 16}</string>
+			<string key="messagebg@2x.png">{164, 164}</string>
 			<string key="paper.png">{16, 16}</string>
-			<string key="paperclip.png">{16, 16}</string>
-			<string key="topwood.png">{16, 16}</string>
+			<string key="paperclip@2x.png">{388, 79}</string>
+			<string key="topwood@2x.png">{640, 99}</string>
 			<string key="wood_bg.png">{16, 16}</string>
 		</dictionary>
-		<string key="IBCocoaTouchPluginVersion">1179</string>
+		<string key="IBCocoaTouchPluginVersion">933</string>
 	</data>
 </archive>
