update feed detail controller.

--- a/Draw/Controller/Feed/FeedDetailController.xib
+++ b/Draw/Controller/Feed/FeedDetailController.xib
@@ -281,7 +281,7 @@
 					<object class="IBUILabel" id="106281494">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">319</int>
-						<string key="NSFrame">{{20, 181}, {280, 21}}</string>
+						<string key="NSFrame">{{20, 179}, {280, 21}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="573333784"/>
@@ -291,10 +291,7 @@
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<string key="IBUIText">猜画:3 | 猜对:2 | 评论:2 | 鲜花:2 | 番茄:1 |</string>
-						<object class="NSColor" key="IBUITextColor">
-							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MC4zMDk4MDM5MjE2IDAuMjQzMTM3MjU0OSAwLjEyNTQ5MDE5NjEAA</bytes>
-						</object>
+						<reference key="IBUITextColor" ref="626117830"/>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">1</int>
 						<float key="IBUIMinimumFontSize">10</float>
